src/test/ui/error-codes/E0376.stderr
error[E0376]: the trait `CoerceUnsized` may only be implemented for a coercion between structures
  --> $DIR/E0376.rs:8:1
   |
LL | impl<T, U> CoerceUnsized<U> for Foo<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0376`.
